fixed alignment

--- a/src/components/interests/interests.styles.css
+++ b/src/components/interests/interests.styles.css
@@ -14,11 +14,21 @@
 
 #artist-list {
     -moz-column-count: 2;
-    -moz-column-gap: 20px;
+    -moz-column-gap: 0px;
     -webkit-column-count: 2;
-    -webkit-column-gap: 20px;
+    -webkit-column-gap: 0px;
     column-count: 2;
-    column-gap: 20px;
+    column-gap: 0px;
+    padding-inline-start: 10px;
+}
+
+@media(min-width: 768px) {
+    #artist-list {
+        -moz-column-gap: 10px;
+        -webkit-column-gap: 10px;
+        column-gap: 10px;
+        padding-inline-start: 40px;
+    }
 }
 
 #artist-list li {
