--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,5 @@ code {
     color: #fff;
     padding: 15px;
     border-radius: 10px;
-    /* height: 100%; */
+    height: 100%;
 }
